crates/jrsonnet-parser/src/snapshots/jrsonnet_parser__tests__add_location_info_to_all_sub_expressions.snap
---
source: crates/jrsonnet-parser/src/lib.rs
expression: "parsep(\"{} { local x = 1, x: x } + {}\")"
---
BinaryOp(
    BinaryOp {
        lhs: ObjExtend(
            Obj(
                MemberList(
                    [],
                ),
            ) from virtual:<test>:0-2,
            MemberList(
                [
                    BindStmt(
                        Field {
                            into: Full(
                                "x",
                            ),
                            value: Num(
                                1.0,
                            ) from virtual:<test>:15-16,
                        },
                    ),
                    Field(
                        FieldMember {
                            name: Fixed(
                                "x",
                            ),
                            plus: false,
                            params: None,
                            visibility: Normal,
                            value: Var(
                                "x",
                            ) from virtual:<test>:21-22,
                        },
                    ),
                ],
            ),
        ) from virtual:<test>:0-24,
        op: Add,
        rhs: Obj(
            MemberList(
                [],
            ),
        ) from virtual:<test>:27-29,
    },
) from virtual:<test>:0-29
