crates/jrsonnet-parser/src/snapshots/jrsonnet_parser__tests__array_comp.snap
---
source: crates/jrsonnet-parser/src/lib.rs
expression: "parsep(\"[std.deepJoin(x) for x in arr]\")"
---
ArrComp(
    Apply(
        Index {
            indexable: Var(
                "std",
            ) from virtual:<test>:1-4,
            parts: [
                IndexPart {
                    value: Str(
                        "deepJoin",
                    ) from virtual:<test>:5-13,
                },
            ],
        } from virtual:<test>:1-13,
        ArgsDesc {
            unnamed: [
                Var(
                    "x",
                ) from virtual:<test>:14-15,
            ],
            named: [],
        },
        false,
    ) from virtual:<test>:1-16,
    [
        ForSpec(
            ForSpecData(
                Full(
                    "x",
                ),
                Var(
                    "arr",
                ) from virtual:<test>:26-29,
            ),
        ),
    ],
) from virtual:<test>:0-30
