crates/jrsonnet-parser/src/snapshots/jrsonnet_parser__tests__basic_math-2.snap
---
source: crates/jrsonnet-parser/src/lib.rs
expression: "parsep(\"2\t+ \t  2\t  *\t2   \t\")"
---
BinaryOp(
    BinaryOp {
        lhs: Num(
            2.0,
        ) from virtual:<test>:0-1,
        op: Add,
        rhs: BinaryOp(
            BinaryOp {
                lhs: Num(
                    2.0,
                ) from virtual:<test>:7-8,
                op: Mul,
                rhs: Num(
                    2.0,
                ) from virtual:<test>:13-14,
            },
        ) from virtual:<test>:7-14,
    },
) from virtual:<test>:0-14
