crates/jrsonnet-parser/src/snapshots/jrsonnet_parser__tests__basic_math-3.snap
---
source: crates/jrsonnet-parser/src/lib.rs
expression: "parsep(\"2+(2+2*2)\")"
---
BinaryOp(
    BinaryOp {
        lhs: Num(
            2.0,
        ) from virtual:<test>:0-1,
        op: Add,
        rhs: BinaryOp(
            BinaryOp {
                lhs: Num(
                    2.0,
                ) from virtual:<test>:3-4,
                op: Add,
                rhs: BinaryOp(
                    BinaryOp {
                        lhs: Num(
                            2.0,
                        ) from virtual:<test>:5-6,
                        op: Mul,
                        rhs: Num(
                            2.0,
                        ) from virtual:<test>:7-8,
                    },
                ) from virtual:<test>:5-8,
            },
        ) from virtual:<test>:3-8,
    },
) from virtual:<test>:0-9
