crates/jrsonnet-parser/src/snapshots/jrsonnet_parser__tests__default_param_before_nondefault.snap
---
source: crates/jrsonnet-parser/src/lib.rs
expression: "parsep(\"local x(foo = 'foo', bar) = null; null\")"
---
LocalExpr(
    [
        Function {
            name: "x",
            params: ExprParams {
                exprs: [
                    ExprParam {
                        destruct: Full(
                            "foo",
                        ),
                        default: Some(
                            Str(
                                "foo",
                            ) from virtual:<test>:14-19,
                        ),
                    },
                    ExprParam {
                        destruct: Full(
                            "bar",
                        ),
                        default: None,
                    },
                ],
                signature: FunctionSignature(
                    [
                        ParamParse {
                            name: ParamName(
                                Some(
                                    "foo",
                                ),
                            ),
                            default: Exists,
                        },
                        ParamParse {
                            name: ParamName(
                                Some(
                                    "bar",
                                ),
                            ),
                            default: None,
                        },
                    ],
                ),
                binds_len: 2,
            },
            value: Literal(
                Null,
            ) from virtual:<test>:28-32,
        },
    ],
    Literal(
        Null,
    ) from virtual:<test>:34-38,
) from virtual:<test>:0-38
