crates/jrsonnet-parser/src/snapshots/jrsonnet_parser__tests__empty_object.snap
---
source: crates/jrsonnet-parser/src/lib.rs
expression: "parsep(\"{}\")"
---
Obj(
    MemberList(
        ObjMembers {
            locals: [],
            asserts: [],
            fields: [],
        },
    ),
) from virtual:<test>:0-2
