crates/jrsonnet-parser/src/snapshots/jrsonnet_parser__tests__imports-2.snap
---
source: crates/jrsonnet-parser/src/lib.rs
expression: "parsep(\"importstr \\\"garnish.txt\\\"\")"
---
Import(
    Str,
    Str(
        "garnish.txt",
    ) from virtual:<test>:10-23,
) from virtual:<test>:0-23
