crates/jrsonnet-parser/src/snapshots/jrsonnet_parser__tests__imports-3.snap
---
source: crates/jrsonnet-parser/src/lib.rs
expression: "parsep(\"importbin \\\"garnish.bin\\\"\")"
---
Import(
    Bin,
    Str(
        "garnish.bin",
    ) from virtual:<test>:10-23,
) from virtual:<test>:0-23
